--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,3 +29,10 @@ body {
   color: aquamarine;
   font-size: 16px;
 }
+
+/* FOOTER */
+
+.footer_main_copyright {
+  text-align: right;
+  color: grey;
+}
